--- a/source/stylesheets/index.css
+++ b/source/stylesheets/index.css
@@ -66,7 +66,7 @@
 .articleitem {   
 	padding: 10px 20px;
 	background-color: #FFF; 
-	border-bottom: 1px solid #f0f0f0
+	border-bottom: 1px solid #E9DDC6;
 } 
 .articleitem-first {
 	padding: 10px 20px;
